--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
